css/responcive.css
/* ... */
@media (max-width: 400px) {
    .aboutus__right {
        height: 70rem;
    }
    .section5__card.swiper-container {
        width: 100%;
    }


}

@media (max-width: 385px) {
    .aboutus__right {
        height: 66rem;
    }
}

@media screen and (max-width: 375px){
    .raiting-icone,
    .spacial-raiting{
        width: 90px;
        margin: 0 15px 10px 15px;
    }
}

@media (max-width: 370px) {
    .aboutus__right {
        height: 64rem;
    }
}

@media (max-width: 360px) {
    .aboutus__right {
        height: 62rem;
    }
}

@media (max-width: 359px) {
    .span-heading {
        font-size: 11px;
    }
}

@media (max-width: 355px) {
    .aboutus__right {
        height: 62rem;
    }
    .slick-prev {
        left: 3%;
    }
    .slick-next {
        right: 3%;
    }
}

@media (max-width: 375px) {
    .content__left-headline {
        font-size: 14px;
    }

    .content__left-headline span {
        font-size: 14px;
    }
}

@media (max-width: 350px) {
    .aboutus__right {
        height: 60rem;
    }
}

@media (max-width: 349px) {
    .slick-dots li {
        width: 18px;
    }
}

@media (max-width: 340px) {
    .span-heading {
        font-size: 9px;
    }

    .aboutus__right {
        height: 58rem;
    }
}

@media (max-width: 330px) {
    .aboutus__right {
        height: 56rem;
    }
}

@media (max-width: 326px) {
    /*.slick-dots {*/
    /*    white-space: nowrap;*/
    /*}*/
}

@media (max-width: 320px) {
    .aboutus__right {
        height: 55rem;
    }
}

